src/test/ui/feature-gate-assoc-type-defaults.stderr
error[E0658]: associated type defaults are unstable (see issue #29661)
  --> $DIR/feature-gate-assoc-type-defaults.rs:14:5
   |
14 |     type Bar = u8; //~ ERROR associated type defaults are unstable
   |     ^^^^^^^^^^^^^^
   |
   = help: add #![feature(associated_type_defaults)] to the crate attributes to enable

error: aborting due to previous error

